fdo#85174 PDF Import: fix character positions

Change-Id: I0aa75b6cb834341e47bbeeaa15d39387a8cb5240